v3.1.1/_sources/plugins/wireless_sensor_test_results_info_module.rst.txt
.. Document meta

:orphan:

.. Anchors

.. _ansible_collections.cisco.dnac.wireless_sensor_test_results_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.wireless_sensor_test_results_info -- Information module for Wireless Sensor Test Results
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 3.1.1).

    To install it use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.wireless_sensor_test_results_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Wireless Sensor Test Results.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-endTime"></div>
                    <b>endTime</b>
                    <a class="ansibleOptionLink" href="#parameter-endTime" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>EndTime query parameter. The epoch time in milliseconds.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-headers"></div>
                    <b>headers</b>
                    <a class="ansibleOptionLink" href="#parameter-headers" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">dictionary</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Additional headers.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-siteId"></div>
                    <b>siteId</b>
                    <a class="ansibleOptionLink" href="#parameter-siteId" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>SiteId query parameter. Assurance site UUID.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-startTime"></div>
                    <b>startTime</b>
                    <a class="ansibleOptionLink" href="#parameter-startTime" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>StartTime query parameter. The epoch time in milliseconds.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-testFailureBy"></div>
                    <b>testFailureBy</b>
                    <a class="ansibleOptionLink" href="#parameter-testFailureBy" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>TestFailureBy query parameter. Obtain failure statistics group by &quot;area&quot;, &quot;building&quot;, or &quot;floor&quot;.</div>
                                                        </td>
            </tr>
                        </table>
    <br/>

.. Notes


.. Seealso

See Also
--------

.. seealso::

   `Wireless Sensor Test Results reference <https://dnacentersdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Wireless Sensor Test Results object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Wireless Sensor Test Results
      cisco.dnac.wireless_sensor_test_results_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        headers:
          custom: value
        siteId: string
        startTime: 0
        endTime: 0
        testFailureBy: string
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-dnac_response"></div>
                    <b>dnac_response</b>
                    <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">dictionary</span>
                                          </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco DNAC Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">{
      &quot;summary&quot;: {
        &quot;totalTestCount&quot;: 0,
        &quot;ONBOARDING&quot;: {
          &quot;AUTH&quot;: {
            &quot;passCount&quot;: 0,
            &quot;failCount&quot;: 0
          },
          &quot;DHCP&quot;: {
            &quot;passCount&quot;: 0,
            &quot;failCount&quot;: 0
          },
          &quot;ASSOC&quot;: {
            &quot;passCount&quot;: 0,
            &quot;failCount&quot;: 0
          }
        },
        &quot;PERFORMANCE&quot;: {
          &quot;IPSLASENDER&quot;: {
            &quot;passCount&quot;: 0,
            &quot;failCount&quot;: 0
          }
        },
        &quot;NETWORK_SERVICES&quot;: {
          &quot;DNS&quot;: {
            &quot;passCount&quot;: 0,
            &quot;failCount&quot;: 0
          }
        },
        &quot;APP_CONNECTIVITY&quot;: {
          &quot;HOST_REACHABILITY&quot;: {
            &quot;passCount&quot;: 0,
            &quot;failCount&quot;: 0
          },
          &quot;WEBSERVER&quot;: {
            &quot;passCount&quot;: 0,
            &quot;failCount&quot;: 0
          },
          &quot;FILETRANSFER&quot;: {
            &quot;passCount&quot;: 0,
            &quot;failCount&quot;: 0
          }
        },
        &quot;RF_ASSESSMENT&quot;: {
          &quot;DATA_RATE&quot;: {
            &quot;passCount&quot;: 0,
            &quot;failCount&quot;: 0
          },
          &quot;SNR&quot;: {
            &quot;passCount&quot;: 0,
            &quot;failCount&quot;: 0
          }
        },
        &quot;EMAIL&quot;: {
          &quot;MAILSERVER&quot;: {
            &quot;passCount&quot;: 0,
            &quot;failCount&quot;: 0
          }
        }
      },
      &quot;failureStats&quot;: [
        {
          &quot;errorCode&quot;: 0,
          &quot;errorTitle&quot;: &quot;string&quot;,
          &quot;testType&quot;: &quot;string&quot;,
          &quot;testCategory&quot;: &quot;string&quot;
        }
      ]
    }</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

